# comminication-os-app

./: README.md  package-lock.json  package.json  svelte.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: example.rs  mod.rs
src-tauri/src/server/handlers/form_handlers/: form_example.rs  form_handler_package.rs  mod.rs
src-tauri/src/server/handlers/message_handlers/: message_contact_handlers.rs  message_example.rs  message_get_set_handlers.rs  message_handler_package.rs  mod.rs
src-tauri/src/server/handlers/wailing_wall_handlers/: mod.rs  wailing_example.rs  wailing_handler_package.rs
src/components/: ConnectedMessageServers.svelte  MyServerMessages.svelte  OtherServerMessageServers.svelte
src/components/message_components/: AddContactMyClient.svelte  AddContactOtherClient.svelte
src/routes/: +page.svelte
src/routes/about/: +page.svelte
src/routes/form/: +page.server.js  +page.svelte  form_data.js
src/routes/form/[slug]/: +page.server.js  +page.svelte
src/routes/messages/: +page.svelte
src/routes/wailing-wall/: +page.svelte
